--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Самый большой фитнесс-центр в Омске.">
     <title>SUPERGYM</title>
+    <link rel="icon" href="favicon/favicon.ico">
+    <link rel="icon" type="img/png" sizes="32x32" href="images/favicon.png">
+    <link rel="preload" href="fonts/AlumniSans-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/RobotoCondensed-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/RobotoCondensed-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="sass/style.scss">
   </head>
 
