--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,7 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">12 занятий</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">5000 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">5000</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">5000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -114,7 +114,7 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">1700 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">1700</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">1700</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -123,7 +123,7 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">2700 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">2700</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">2700</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -134,7 +134,7 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">72 занятия</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">30000 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">30000</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">30000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -143,7 +143,7 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">10200 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">10200</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">10200</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -152,7 +152,7 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">16200 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">16200</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">16200</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -163,7 +163,7 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">144 занятия</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">60000 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">60000</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">60000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -172,7 +172,7 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">20400 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">20400</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">20400</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -181,7 +181,7 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price">32400 <span>₽</span></span>
+                    <span class="card__price"><span class="card__price-count">32400</span><span class="card__price-rub">₽</span></span>
                     <span class="card__shadow">32400</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
