--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
           <section class="hero" data-test="hero">
             <div class="hero__wrapper">
               <div class="hero__content"><h1>ФИТНЕС ЦЕНТР</h1>
-                <span>ОМСК</span>
+                <span>Омск</span>
                 <ul class="hero-list">
                   <li class="hero-list__item">Тренажёрный зал</li>
                   <li class="hero-list__item">Групповые занятия</li>
