--- a/source/index.html
+++ b/source/index.html
@@ -54,10 +54,10 @@
         <section class="gym" data-test="about">
           <div class="gym__container container">
             <div class="gym__description">
-              <h2 class="gym__title title">Тренажерный зал</h2>
+              <h2 class="gym__title title">Тренажёрный зал</h2>
             <p class="gym__subtitle">Просторный зал площадью 900 кв/м</p>
-            <p class="gym__text">Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для всех спортсменов.</p>
-            <p class="gym__text">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами.Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+            <p class="gym__text">Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
+            <p class="gym__text">В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами. Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
             </div>
             <div class="gym__media">
               <div class="gym__image">
