--- a/source/index.html
+++ b/source/index.html
@@ -414,11 +414,11 @@
               <li class="advantages__card advantages__card--center">
                 <div class="advantages__number">
                   <span>100</span>
-                  <span class="advantages__unit">Тренажеров</span>
+                  <span class="advantages__unit">Тренажёров</span>
                 </div>
                 <div class="advantages__content">
-                  <h3 class="visually-hidden">Тренажеры</h3>
-                  <p class="advantages__description">Современные тренажеры на все группы мышц</p>
+                  <h3 class="visually-hidden">Тренажёры</h3>
+                  <p class="advantages__description">Современные тренажёры на все группы мышц</p>
                 </div>
               </li>
               <li class="advantages__card">
