--- a/source/index.html
+++ b/source/index.html
@@ -428,7 +428,7 @@
                 </div>
                 <div class="advantages__content">
                   <h3 class="advantages__title-card">Площадь</h3>
-                  <p class="advantages__description">Занимайтесь без очередей и толкучки</p>
+                  <p class="advantages__description">Занимайтесь без очередей и толкучки</p>
                 </div>
               </li>
               <li class="advantages__card">
@@ -438,7 +438,7 @@
                 </div>
                 <div class="advantages__content">
                   <h3 class="advantages__title-card">Собственная парковка</h3>
-                  <p class="advantages__description">Вы всегда найдете место для своей машины на нашей парковке</p>
+                  <p class="advantages__description">Вы всегда найдёте место для своей машины на нашей парковке</p>
                 </div>
               </li>
               <li class="advantages__card">
@@ -458,7 +458,7 @@
                 </div>
                 <div class="advantages__content">
                   <h3 class="advantages__title-card">Тренерский опыт</h3>
-                  <p class="advantages__description">Добивайтесь своих целей быстрее с профессиональным тренером</p>
+                  <p class="advantages__description">Добивайтесь своих целей быстрее с профессиональным тренером</p>
                 </div>
               </li>
             </ul>
