--- a/source/index.html
+++ b/source/index.html
@@ -472,7 +472,7 @@
                 <div class="discounts-card__content">
                   <h3 class="discounts-card__title">Год</h3>
                   <span class="discounts-card__price">4999</span>
-                  <p class="discounts-card__description">Безлимитный абонемент в тренажерный зал</p>
+                  <p class="discounts-card__description">Безлимитный абонемент в тренажёрный зал</p>
                   <a class="discounts-card__button" href="#">подробнее</a>
                 </div>
                 <div class="discounts-card__image">
@@ -493,7 +493,7 @@
               <li class="discounts__item discounts-card">
                 <div class="discounts-card__content">
                   <h3 class="discounts-card__title">Скидка 20%</h3>
-                  <p class="discounts-card__description">Корпоративный фитнес с командой</p>
+                  <p class="discounts-card__description">Корпоративный фитнес с командой</p>
                   <a class="discounts-card__button" href="#">подробнее</a>
                 </div>
               </li>
