--- a/source/index.html
+++ b/source/index.html
@@ -528,7 +528,7 @@
                       </div>
                       <div class="accordion__content" data-accordion="content">
                         <div class="accordion__description">
-                          <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придет вам на почту.</p>
+                          <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
                         </div>
                       </div>
                     </div>
