--- a/source/index.html
+++ b/source/index.html
@@ -759,7 +759,7 @@
                     </picture>
                     <div class="reviews-card__content">
                       <h3 class="reviews-card__title">Анна Орлова</h3>
-                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажёры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
                     </div>
                   </li>
                   <li class="reviews-card swiper-slide">
@@ -770,7 +770,7 @@
                     </picture>
                     <div class="reviews-card__content">
                       <h3 class="reviews-card__title">Анна Орлова</h3>
-                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажёры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
                     </div>
                   </li>
                   <li class="reviews-card swiper-slide">
@@ -781,7 +781,7 @@
                     </picture>
                     <div class="reviews-card__content">
                       <h3 class="reviews-card__title">Анна Орлова</h3>
-                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                      <p class="reviews-card__description">«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажёры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
                     </div>
                   </li>
                 </ol>
