--- a/source/index.html
+++ b/source/index.html
@@ -209,9 +209,9 @@
             </div>
             <div class="games__image">
               <picture>
-                <source media="(max-width: 767px)" srcset="img/crossfit-games-mobile-1x.jpg 1x, img/crossfit-games-mobile-2x.jpg 2x" width="290" height="292" type="image/webp">
-                <source media="(max-width: 1365px)" srcset="img/crossfit-games-tablet-1x.jpg 1x, img/crossfit-games-tablet-2x.jpg 2x" width="386" height="324" type="image/webp">
-                <img src="img/crossfit-games-1x.jpg" srcset="img/crossfit-games-2x.jpg" width="660" height="401" alt="Мужчина выполняющий упражнение.">
+                <source media="(max-width: 767px)" srcset="img/crossfit-games-mobile-1x.webp 1x, img/crossfit-games-mobile-2x.webp 2x" width="290" height="292" type="image/webp">
+                <source media="(max-width: 1365px)" srcset="img/crossfit-games-tablet-1x.webp 1x, img/crossfit-games-tablet-2x.webp 2x" width="378" height="348" type="image/webp">
+                <img src="img/crossfit-games-1x.webp" srcset="img/crossfit-games-2x.webp" width="660" height="401" alt="Мужчина выполняющий упражнение.">
               </picture>
             </div>
           </div>
