--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,14 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">12 занятий</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">5000</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">5000</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">5000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -114,7 +121,14 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">1700</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">1700</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">1700</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -123,7 +137,14 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">2700</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">2700</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">2700</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -134,7 +155,14 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">72 занятия</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">30000</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">30000</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">30000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -143,7 +171,14 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">10200</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">10200</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">10200</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -152,7 +187,14 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">16200</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">16200</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">16200</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -163,7 +205,10 @@
                   <h3 class="card__title">С тренером</h3>
                   <p class="card__description">144 занятия</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">60000</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">60000</span>
+                      <span class="card__price-rub">₽</span>
+                    </span>
                     <span class="card__shadow">60000</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -172,7 +217,14 @@
                   <h3 class="card__title">Дневной</h3>
                   <p class="card__description">с 8:00 до 17:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">20400</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">20400</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">20400</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
@@ -181,7 +233,14 @@
                   <h3 class="card__title">Полный день</h3>
                   <p class="card__description">с 8:00 до 22:00</p>
                   <div class="card__price-wrapper">
-                    <span class="card__price"><span class="card__price-count">32400</span><span class="card__price-rub">₽</span></span>
+                    <span class="card__price">
+                      <span class="card__price-count">32400</span>
+                      <span class="card__price-rub">
+                        <svg role="img"  viewBox="0 0 30 42" width="30" height="42" focusable="false">
+                          <use href="/__spritemap#sprite-rub"></use>
+                        </svg>
+                      </span>
+                    </span>
                     <span class="card__shadow">32400</span>
                   </div>
                   <a class="card__button button button--dark" href="#">Купить абонемент</a>
