--- a/source/index.html
+++ b/source/index.html
@@ -621,7 +621,7 @@
                   <li class="faq__item accordion-item" data-accordion="element">
                     <div class="accordion__element" data-accordion="element">
                       <div class="accordion__button-wrapper">
-                        <h3 class="accordion__title">Сколько тренеров работает в клубе и какова<br> их квалификация?</h3>
+                        <h3 class="accordion__title">Сколько тренеров работает<br> в клубе и какова <br>их квалификация?</h3>
                         <button class="accordion__button btn" type="button" data-accordion="button"><span class="visually-hidden">Открыть</span></button>
                       </div>
                       <div class="accordion__content" data-accordion="content">
